# projector

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  pyproject.toml  render.yaml
deploy/: DEPLOY.md
examples/: sample_transforms.py
projector/: __init__.py  cli.py  demo.py  terrain.py
projector/adapters/: __init__.py  apairo_source.py  array_source.py
projector/core/: __init__.py  labels.py  source.py
projector/engine/: __init__.py  player.py  transforms.py
projector/server/: __init__.py  app.py  desktop.py  files.py  protocol.py  state.py
projector/web/: index.html  style.css
projector/web/src/: api.js  app.js  colors.js  panels.js  pose.js  ws.js
projector/web/src/engine/: PROVENANCE  README.md  octree-worker.js  octree.js  overlays.js  viewer.js
projector/web/src/views/: bev.js  cloud.js  image.js
tests/: test_apairo_source.py  test_app.py  test_player.py  test_protocol.py  test_transforms.py
